fix dropdown display on mobile menu

--- a/src/scripts/components/navbar/navbar.scss
+++ b/src/scripts/components/navbar/navbar.scss
@@ -279,7 +279,7 @@ $breakpoints: (xl, lg, md, sm, xs, xxs);
                         align-items: center;
                         flex-direction: column;
                         transform: translateY(-0.5rem);
-                        overflow-y: hidden;
+                        overflow: hidden;
                         @include transition($speed: med);
 
                         .navbar-row {
